--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h1 class="h1">Place Your Order Here!</h1>
             <br>
             <div class="form-text"> 
-            <h2 class="h2"><b>(1)...Your Info:</b></h2>
+            <h2 class="h2"><b>Your Info:</b></h2>
             <br>
             <div class="name">
                 <i class="fa fa-user user"></i>
@@ -43,7 +43,7 @@
             <br>
             <br>
 
-        <h2 class="h2"><b>(2)...Burger Patty Choice:</b></h2>
+        <h2 class="h2"><b>Burger Patty Choice:</b></h2>
         <br>
         <div class=" Burger-choice">
             <input type="radio" class="burger" name="b" >
