mene apna kam karlya

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         <br>
 
-        <h2 class="h2"><b>(3)...Chees Flavors:</b></h2>
+        <h2 class="h2"><b>Chees Flavors:</b></h2>
         <br>
         <div>
             <select class="chees">
@@ -81,7 +81,7 @@
         <br>
         <br>
 
-        <h2 class="h2"><b>(4)...Your Sides:</b></h2>
+        <h2 class="h2"><b>Your Sides:</b></h2>
         <br>
         <div>
             <input type="radio" class="sides" name="g">
